--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "./src/main.d.ts",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "preinstall": "npm run build",
+    "preinstall": "npm run build"
   },
   "dependencies": {
     "@google/maps": "^0.4.6",
